[package]
name = "bcast"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "Low latency broadcast (SPMC) buffer designed to work with shared memory."
readme = "./README.md"
documentation = "https://docs.rs/bcast"
repository = "https://github.com/HaveFunTrading/bcast"
keywords = ["ipc", "spmc", "shared-memory", "low-latency", "ring-buffer"]
categories = ["data-structures", "concurrency", "asynchronous"]
rust-version = "1.83.0"

[dependencies]
thiserror = "2.0.3"
crossbeam-utils = "0.8.20"

[dev-dependencies]
anyhow = "1.0.93"
rand = "0.8.5"
memmap2 = "0.9.5"